--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
         <nav class="navbar">
             <nav>
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Biography</a></li>
-                    <li><a href="">Skills, Hobbies, Interests</a></li>
-                    <li><a href="">Resume</a></li>
-                    <li><a href="">NJZ & Me Photo Dump</a></li>
-                    <li><a href="">My Kind of Films</a></li>
-                    <li><a href="">My Dream Places</a></li>
-                    <li><a href="">My Bucketlist</a></li>
+                    <li><a href="https://seandenzel.github.io/LandingPage/">Home</a></li>
+                    <li><a href="https://seandenzel.github.io/Biography/">Biography</a></li>
+                    <li><a href="https://seandenzel.github.io/SkillsInterestsHobbies/">Skills, Hobbies, Interests</a></li>
+                    <li><a href="https://seandenzel.github.io/Resume/">Resume</a></li>
+                    <li><a href="https://seandenzel.github.io/PhotoDump/">NJZ & Me Photo Dump</a></li>
+                    <li><a href="https://seandenzel.github.io/MyBeats/">My Beats</a></li>
+                    <li><a href="https://seandenzel.github.io/MyTV/">My Kind of Films</a></li>
+                    <li><a href="https://seandenzel.github.io/DreamPlaces1/">My Dream Places</a></li>
+                    <li><a href="https://seandenzel.github.io/Bucket/">My Bucketlist</a></li>
                 </ul>
             </nav>
         </nav>
